[tool.poetry]
name = "strprofiler"
version = "0.1.5"
description = "A simple python utility to compare short tandem repeat (STR) profiles."
authors = ["Jared Andrews <jared.andrews07@gmail.com>",
           "Mike Lloyd <mike.lloyd@jax.org>"]
license = "MIT"
repository = "https://github.com/j-andrews7/strprofiler"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pandas = "^1.4.3"
rich-click = "^1.5.2"
numpy = "^1.23.3"
openpyxl = "^3.0.10"
shiny = "^0.7.0"
shinyswatch = "^0.4.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
strprofiler = 'strprofiler.strprofiler:strprofiler'
strprofiler-app = 'strprofiler.strprofiler:app'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
