[tool.poetry]
name = "strprofiler"
version = "0.2.0"
description = "A simple python utility to compare short tandem repeat (STR) profiles."
authors = ["Jared Andrews <jared.andrews07@gmail.com>",
           "Mike Lloyd <mike.lloyd@jax.org>"]
license = "MIT"
repository = "https://github.com/j-andrews7/strprofiler"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = "^1.4.3"
rich-click = "^1.5.2"
numpy = "^1.26.3"
openpyxl = "^3.0.10"
shiny = "^0.8.0"
shinyswatch = "^0.4.2"
Jinja2 = "^3.1.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
strprofiler = 'strprofiler.strprofiler:strprofiler'
strprofiler-app = 'strprofiler.strprofiler:app'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
